# clearview

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE copy  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  README.md
clearview/: __init__.py  api.py
clearview/data/: __init__.py  datasets.py  transforms.py
clearview/losses/: combined.py
clearview/models/: __init__.py  attention_unet.py  base.py  blocks.py  unet.py
clearview/scripts/: evaluate.py  inference.py  train.py
clearview/training/: __init__.py  callbacks.py  trainer.py
clearview/utils/: __init__.py  checkpoint.py  metrics.py  visualization.py
